# rust-vcl

./: .gitignore  Cargo.toml  README.md  callbacks.rs  enums.rs  event_callback.rs  fns.rs  imports.rs  lib.rs  types.rs  vcl.rs
apptest/: Cargo.toml  app.rc  app.res  build-win-x64-msvc.bat  build-win-x64.bat  build-win-x86-msvc.bat  build-win-x86.bat  liblcl.def  liblcl.lib
apptest/.cargo/: config
apptest/src/: build.rs  form2.rs  form3.rs  main.rs  mainform.rs
apptest/win64/: genlib.bat  liblcl.def  liblcl.lib
liblcl/: Cargo.toml  enums.rs  event_callback.rs  funcs.rs  imports.rs  lib.rs  vcl.rs
src/: build.rs  enums.rs  fns.rs  imports.rs  lclapi.rs  lib.rs  macros.rs  main.rs  messages.rs  types.rs  typesimpl.rs  vcl.rs  vcl_macros.rs
vcl_derives/: Cargo.toml
vcl_derives/src/: lib.rs
