[package]
name = "rustvcl"
version = "0.1.0"
authors = ["不在乎y(ying32)"]
edition = "2018"
#license = ""
#readme = "README.md"
repository = "https://github.com/ying32/rust-vcl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2.0"
lazy_static="1.4.0"

#[[example]]
#name = ""
#path = ""