[package]
name = "apptest"
version = "0.1.0"
authors = ["ying32 <ying_33@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustvcl = { path = "../", version = "0.1.0" }

[dependencies]
rustvcl = { path = "../", version = "0.1.0" }
libc = "0.2.0"
libloading = "0.6.2"