[package]
name = "apptest"
version = "0.1.0"
authors = ["ying32 <ying_33@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "src/build.rs"

[build-dependencies]
rust_vcl = { path = "../", version = "0.1.0" }

[dependencies]
rust_vcl = { path = "../", version = "0.1.0" }
libc = "0.2.0"
#libloading = "0.6.2"

[target.'cfg(windows)'.build-dependencies]